Fix slot z-index hierachy bugging

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -229,6 +229,7 @@ img.info-icon {
 
 button.flyff-close-button {
   position: absolute;
+  z-index: 2;
   top: -8px;
   left: -8px;
   margin: 5px;
